--- a/css/layout.css
+++ b/css/layout.css
@@ -1,1 +1,28 @@
 @charset "UTF8";
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Be Vietnam Pro", sans-serif;
+}
+
+.top-banner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 40px;
+  background: white;
+  border-bottom: 1px solid #ddd;
+}
+
+.logo {
+  height: 80px;
+}
+
+.nav a {
+  margin: 0 15px;
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+}
