--- a/css/layout.css
+++ b/css/layout.css
@@ -24,7 +24,7 @@ body {
   font-weight: bold;
   text-decoration: none;
   color: black;
-  font-size: 22px;
+  font-size: 30px;
   font-family: "Slackey", cursive;
 }
 
@@ -68,4 +68,112 @@ body {
   padding: 10px 20px;
   font-weight: bold;
   text-decoration: none;
+  border-radius: 10px
+}
+
+.nav {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-stuff {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.search-bar {
+  padding: 6px 10px;
+}
+
+.cart-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.cart-icon {
+  width: 45px;
+  height: 45px;
+}
+
+.new-in {
+  padding: 50px 40px;
+}
+
+.new-in h2 {
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+
+.products {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.product-card {
+  width: 23%;
+  text-align: center;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+}
+
+.product-card button {
+  margin-top: 10px;
+  background: #b22222;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 10px
+}
+
+.split-banner {
+  display: flex;
+  margin-top: 50px;
+}
+
+.split-banner .half {
+  width: 50%;
+  position: relative;
+  height: 400px;
+  overflow: hidden;
+}
+
+.split-banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.button-overlay {
+   position: absolute;
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  background: #b22222;
+  color: white;
+  padding: 10px 20px;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 10px;
+  z-index: 1; 
+}
+
+.fender-banner {
+  position: relative;
+  margin-top: 50px;
+}
+
+.fender-banner img {
+  width: 100%;
+  height: auto;
 }
