--- a/css/layout.css
+++ b/css/layout.css
@@ -6,7 +6,7 @@ body {
   font-family: "Be Vietnam Pro", sans-serif;
 }
 
-.top-banner {
+.top_banner {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -41,7 +41,7 @@ body {
   object-position: top;
 }
 
-.main-text {
+.main_text {
   position: absolute;
   top: 15%;
   left: 10%;
@@ -49,13 +49,13 @@ body {
   max-width: 600px;
 }
 
-.main-text h1 {
+.main_text h1 {
   font-size: 60px;
   line-height: 1.1;
   margin: 0;
 }
 
-.main-text h3 {
+.main_text h3 {
   font-size: 28px;
   margin-bottom: 10px;
 }
@@ -78,32 +78,32 @@ body {
   align-items: center;
 }
 
-.nav-stuff {
+.nav_stuff {
   display: flex;
   align-items: center;
   gap: 15px;
 }
 
-.search-bar {
+.search_bar {
   padding: 6px 10px;
 }
 
-.cart-button {
+.cart_button {
   background: none;
   border: none;
   cursor: pointer;
 }
 
-.cart-icon {
+.cart_icon {
   width: 45px;
   height: 45px;
 }
 
-.new-in {
+.new_in {
   padding: 50px 40px;
 }
 
-.new-in h2 {
+.new_in h2 {
   font-size: 40px;
   margin-bottom: 30px;
 }
@@ -115,17 +115,17 @@ body {
   justify-content: space-between;
 }
 
-.product-card {
+.product_card {
   width: 23%;
   text-align: center;
 }
 
-.product-card img {
+.product_card img {
   width: 100%;
   height: auto;
 }
 
-.product-card button {
+.product_card button {
   margin-top: 10px;
   background: #b22222;
   color: white;
@@ -136,12 +136,12 @@ body {
   border-radius: 10px
 }
 
-.split-banner {
+.split_banner {
   display: flex;
   margin-top: 50px;
 }
 
-.split-banner .half {
+.split_banner .half {
   width: 50%;
   position: relative;
   height: 400px;
@@ -154,7 +154,7 @@ body {
   object-fit: cover;
 }
 
-.button-overlay {
+.button_overlay {
    position: absolute;
   top: 50%; 
   left: 50%; 
@@ -168,12 +168,40 @@ body {
   z-index: 1; 
 }
 
-.fender-banner {
+.fender_banner {
   position: relative;
   margin-top: 50px;
 }
 
-.fender-banner img {
+.fender_banner img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  background: #eee;
+  padding: 30px;
+  font-size: 14px;
+}
+
+.footer_col h5 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.footer_col input {
+  padding: 5px;
+  width: 100px;
+  margin-right: 5px;
+}
+
+.footer_col button {
+  padding: 6px 10px;
+  background: #b22222;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
