--- a/css/layout.css
+++ b/css/layout.css
@@ -270,11 +270,21 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
+  overflow: hidden;
 }
-        
+
 .product-image img {
   max-height: 100%;
   max-width: 100%;
+  object-fit: contain;
+}
+
+.product-image a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
         
 .product-title {
@@ -288,6 +298,7 @@ body {
 .product-price {
   font-weight: bold;
   margin-bottom: 10px;
+  margin-top: 20px
 }
 
 .back-button {
@@ -362,12 +373,6 @@ body {
   display: flex;
   align-items: flex-start;
 }
-
-/*.features-list li::before {
-content: "•";
-color: #b22222;
-margin-right: 10px;
-} */
 
 .product-images {
   background-color: white;
