--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,11 @@ h1, h2, h3, h4, h5 {
 }
 
 p {
-  font-size: 16px;
-  line-height: 1.4;
-  font-weight: 400;
+    font-size: 20px;
+    line-height: 1.4;
+    font-weight: bold;
 }
 
 button, .button, .button_overlay {
   font-family: "Slackey", cursive;
 }
-
