--- a/css/layout.css
+++ b/css/layout.css
@@ -317,7 +317,6 @@ body {
     font-size: 1.5vw;
     margin: 0;
     text-align: center;
-	
 }
 
 .back-button {
@@ -325,6 +324,7 @@ body {
   margin-bottom: 10px;
   color: #333;
   text-decoration: none;
+  padding-top: 20px: 
 }
 
 .product-grid {
