--- a/css/layout.css
+++ b/css/layout.css
@@ -317,6 +317,7 @@ body {
     font-size: 1.5vw;
     margin: 0;
     text-align: center;
+    font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
 }
 
 .back-button {
