--- a/css/layout.css
+++ b/css/layout.css
@@ -695,8 +695,22 @@ body {
 
   .nav_stuff {
     display: none;
-	}}
+	}
+
+  .main_text h1 {
+    font-size: 40px;
+    line-height: 1;
+    margin: 0;
+  }
+
+  .main_text h3 {
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+}
 	
+
+
   .cart_icon_container {
     position: relative;
     display: inline-block;
