--- a/css/layout.css
+++ b/css/layout.css
@@ -707,8 +707,18 @@ body {
     font-size: 20px;
     margin-bottom: 5px;
   }
+	
+  .homepage_products {
+    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+	
 }
 	
+
+
 
 
   .cart_icon_container {
