--- a/css/style.css
+++ b/css/style.css
@@ -68,4 +68,22 @@ button, .button, .button_overlay {
     gap: 20px;
   }
 	
+  .sidebar {
+    display: none;
+  }
+	
+  .lots_o_products {
+    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+	
+	
+	
+	
+	
+	
+	
+	
 }
