--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,22 @@ button, .button, .button_overlay {
   		text-transform: uppercase;
 	}
 	
-		
+	.related-grid {
+  		display: grid;
+  		grid-template-columns: repeat(2, 1fr);
+  		gap: 10px;
+  		padding: 25px 20px;
+	}	
+	
+	.footer_col h3 {
+  		font-size: 10px;
+  		margin-bottom: 10px;
+	}
+	
+	.footer_col p {
+  		font-size: 7px;
+  		margin-bottom: 7px;
+	}
 	
 	
 }
