--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,13 @@ button, .button, .button_overlay {
   .nav a {
     font-size: 24px;
   }
+	
+	.fender_banner {
+  		position: relative;
+  		margin-top: 50px;
+  		height: 400px;
+  		overflow: hidden;
+	}
 
   .main_text h1 {
     font-size: 40px;
@@ -76,7 +83,7 @@ button, .button, .button_overlay {
   }
 	
 	.product-price p {
-    	font-size: 10px;
+    	font-size: 12px;
    		margin: 0;
 	}
 
@@ -90,7 +97,7 @@ button, .button, .button_overlay {
   		border: none;
   		padding: 10px 20px;
   		width: 100%;
-  		font-size: 18px;
+  		font-size: 15px;
   		font-weight: bold;
   		border-radius: 7px;
   		cursor: pointer;
@@ -101,7 +108,7 @@ button, .button, .button_overlay {
   		display: grid;
   		grid-template-columns: repeat(2, 1fr);
   		gap: 10px;
-  		padding: 25px 20px;
+  		padding: 10px 10px;
 	}	
 	
 	.footer_col h3 {
@@ -112,6 +119,7 @@ button, .button, .button_overlay {
 	.footer_col p {
   		font-size: 7px;
   		margin-bottom: 7px;
+		font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif"
 	}
 	
 	.cart_icon {
@@ -120,9 +128,12 @@ button, .button, .button_overlay {
 	}
 	
 	.search_icon {
-  		width: 100px;
-  		height: 27px;
-  		padding: 3px 5px;
+  		display: none;
+	}
+	
+	.item-total span {
+  		font-size: 15px;
+  		font-weight: bold;
 	}
 	
 	
