--- a/css/layout.css
+++ b/css/layout.css
@@ -141,6 +141,7 @@ body {
 .split_banner {
   display: flex;
   margin-top: 50px;
+  width: 100%;
 }
 
 .split_banner .half {
@@ -148,12 +149,16 @@ body {
   position: relative;
   height: 400px;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.split-banner img {
+.split-banner .half img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain; 
+  display: block;
 }
 
 .button_overlay {
@@ -789,7 +794,7 @@ body {
         }
 
         .details-container {
-            background-color: #E0E0E0;
+            background-color: #ffffff;
             border: 2px solid #d9d9d9;
             border-radius: 15px;
             margin: 0 30px 30px 30px;
