--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,7 @@ button, .button, .button_overlay {
     	flex-direction: column;
     	align-items: center;
     	gap: 20px;
+		margin-bottom: 20px;
     	padding: 10px;
   	}
 
@@ -224,7 +225,7 @@ button, .button, .button_overlay {
 
   	.related-product {
     	width: 100%;
-    	max-width: 360px;
+    	max-width: 420px;
   	}
 	
 	
