--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ button, .button, .button_overlay {
   	font-family: "Slackey", cursive;
 }
 
+/* media query seciton with all rules that apply when resolution has a width under 400px */
 @media (max-width: 400px) {
 	.hamburger {
     	display: block;
